--- a/PeptideAnnotator.html
+++ b/PeptideAnnotator.html
@@ -242,7 +242,7 @@
                         <br/>
                         <div class="row">
                           <div class="col-md-12">
-                            <button type="submit" class="btn btn-success" ng-click="processData()">Generate Chart</button>
+                            <button type="submit" class="btn btn-success" ng-click="ProcessData()">Generate Chart</button>
                             <button class="btn btn-primary" ng-click="downloadData()">Export Data</button>
                             <button svg-download title="{{peptide.sequence}}" class="btn btn-primary">Download as SVG</button>
                           </div>
