--- a/VisualizeUploadedData.html
+++ b/VisualizeUploadedData.html
@@ -60,8 +60,6 @@
         <li><a href="BulkDataUpload.html">Bulk Data Upload</a></li>
         <li class="divider-vertical"></li>
         <li class="active"><a href="VisualizeUploadedData.html">Visualize Uploaded Data</a></li>
-        <li class="divider-vertical"></li>
-        <li><a href="support/css/external/woff2/Fonts.zip">Download Used Fonts</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
       	<ul><a href="http://coonlabs.com"><img src="support/images/CoonLogo.png"></a></ul>
@@ -162,6 +160,8 @@
                               <label class="btn btn-fragment" ng-model="checkModel.H2O.selected" uib-btn-checkbox>-H<sub>2</sub>O</label>
                               <label class="btn btn-fragment" ng-model="checkModel.NH3.selected" uib-btn-checkbox>-NH<sub>3</sub></label>
                               <label class="btn btn-fragment" ng-model="checkModel.CO2.selected" uib-btn-checkbox>-CO<sub>2</sub></label>
+                              <label class="btn btn-fragment" ng-model="checkModel.HCNO.selected" uib-btn-checkbox>HCNO</label>
+                              <label class="btn btn-fragment" ng-model="checkModel.HPO3.selected" uib-btn-checkbox>HPO3</label>
                             </div>
                           </div>
                         </div>
